--- a/index.html
+++ b/index.html
@@ -1,194 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Logic Runner | Propositional Logic Game</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Polished Game UI</title>
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap" rel="stylesheet">
+<!-- Icons (FontAwesome for demo) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-p6MZcK1Lk6c5fJx6pZ1p6Lv5zVykvM6n3S36/GBNSZ/wR+0HhUec5Zq+eH5zJXG0J3EkDo9yU+c5sA5yP9I6w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<style>
+/* --- Your full CSS from previous code --- */
+/* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap');
 
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+:root{
+  --accent:#ff7a3d;
+  --muted:#6b7280;
+  --card: rgba(255,255,255,0.95);
+  --bg1: #fff7f0;
+  --bg2: #fffaf6;
+  --shadow-lg: 0 18px 60px rgba(0,0,0,0.08);
+}
+
+/* base */
+*{box-sizing:border-box}
+body{
+  margin:0;
+  font-family:'IBM Plex Mono', monospace;
+  background: linear-gradient(135deg,var(--bg1),var(--bg2));
+  color:#222;
+  -webkit-font-smoothing:antialiased;
+  -moz-osx-font-smoothing:grayscale;
+  overflow-x:hidden;
+}
+
+/* animated subtle background */
+.bg-animated{
+  position:fixed;
+  inset:0;
+  z-index:-1;
+  background: radial-gradient(circle at 10% 10%, rgba(255,122,61,0.06), transparent 8%),
+              radial-gradient(circle at 85% 80%, rgba(30,159,113,0.04), transparent 12%);
+  pointer-events:none;
+  opacity:0.95;
+}
+
+/* container */
+.container{ max-width:1100px; margin:0 auto; padding:18px; }
+
+/* topbar */
+.topbar{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:12px 16px;
+  position:sticky;
+  top:0;
+  background: linear-gradient(180deg, rgba(255,255,255,0.95), rgba(255,255,255,0.9));
+  backdrop-filter: blur(6px);
+  box-shadow:0 8px 30px rgba(0,0,0,0.06);
+  z-index:400;
+}
+.topbar-left{display:flex;align-items:center;gap:12px}
+.hamburger{
+  background:transparent;
+  border:none;
+  font-size:18px;
+  padding:8px;
+  display:inline-flex;
+  cursor:pointer;
+  align-items:center;
+  justify-content:center;
+  border-radius:8px;
+}
+.hamburger:hover{ background: rgba(0,0,0,0.03); }
+.logo{display:flex;align-items:center;gap:10px;font-weight:700}
+.logo i{color:var(--accent);font-size:20px}
+.topbar-right{display:flex;gap:8px;align-items:center}
+.icon-btn{background:transparent;border-radius:10px;padding:8px;border:1px solid transparent;cursor:pointer}
+.icon-btn i{font-size:16px;color:#444}
+
+/* small hamburger dropdown (option B: downward panel) */
+.hamburger-menu{
+  position:absolute;
+  top:60px;
+  left:12px;
+  background: var(--card);
+  border-radius:10px;
+  box-shadow:0 12px 30px rgba(0,0,0,0.12);
+  padding:8px;
+  z-index:450;
+  min-width:180px;
+  display:flex;
+  flex-direction:column;
+  gap:6px;
+}
+.hamburger-menu .menu-item{
+  background:transparent;
+  border:none;
+  text-align:left;
+  padding:10px 12px;
+  border-radius:8px;
+  cursor:pointer;
+  font-weight:800;
+}
+.hamburger-menu .menu-item:hover{ background: rgba(0,0,0,0.04); }
+
+/* hero layout */
+.hero{display:flex;gap:28px;margin-top:18px;align-items:flex-start}
+.hero-left{flex:1}
+.hero-right{width:360px}
+.shimmer{
+  font-size:2.2rem;margin:0;
+  background: linear-gradient(90deg, #333, var(--accent), #333);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  background-size:200%;
+}
+.subtitle{color:var(--muted);margin-top:8px}
+
+/* big cards grid */
+.menu-cards{margin-top:18px}
+.big-card-row{display:flex;gap:14px;margin-bottom:14px}
+.big-card{
+  flex:1;
+  display:flex;
+  align-items:center;
+  gap:14px;
+  padding:18px;
+  border-radius:12px;
+  cursor:pointer;
+  border:none;
+  color:#222;
+  background:linear-gradient(135deg,#ff9d5c,#ffd89a);
+  box-shadow:var(--shadow-lg);
+  transition:transform .15s,box-shadow .15s;
+}
+.big-card:hover{transform:translateY(-6px)}
+.card-icon-wrap{
+  width:56px;height:56px;border-radius:12px;
+  display:flex;align-items:center;justify-content:center;
+  background:rgba(0,0,0,0.06)
+}
+.card-icon{font-size:26px;color:#fff}
+.card-body{display:flex;flex-direction:column;align-items:flex-start}
+.card-title{font-weight:900;font-size:1.05rem}
+.big-card small{color:#262626;opacity:.9}
+
+/* responsive / hamburger */
+@media (max-width:900px){
+  .hero{flex-direction:column}
+  .hero-right{width:100%}
+}
+@media (max-width:560px){
+  .menu-cards .big-card-row{flex-direction:column}
+}
+</style>
 </head>
 <body>
-  <div class="bg-animated" aria-hidden="true"></div>
+<div class="bg-animated"></div>
 
-  <header class="topbar" role="banner">
-    <div class="topbar-left">
-      <button id="hamburger" class="hamburger" aria-label="Open menu" type="button"><i class="fas fa-bars"></i></button>
-      <div class="logo" aria-hidden="false"><i class="fas fa-brain"></i><span class="brand">Logic Runner</span></div>
-    </div>
-
-    <!-- topnav removed from header (nav items are now inside the hamburger dropdown) -->
-    <nav class="topnav" id="topnav" aria-label="Main navigation" style="display:none;"></nav>
-
-    <div class="topbar-right">
-      <button id="sound-toggle" class="icon-btn" title="Toggle sound" type="button"><i class="fas fa-volume-up"></i></button>
-      <button id="open-leaderboard" class="icon-btn" title="Leaderboard" type="button"><i class="fas fa-trophy"></i></button>
-    </div>
-  </header>
-
-  <!-- small dropdown menu (appears under the hamburger) -->
-  <div id="hamburger-menu" class="hamburger-menu" aria-hidden="true" style="display:none;">
-    <button class="menu-item" data-target="home" type="button">Play</button>
-    <button class="menu-item" data-target="tutorial-panel" type="button">Tutorial</button>
-    <button class="menu-item" data-target="about-panel" type="button">About</button>
-    <button class="menu-item" data-target="leaderboard-panel" type="button">Leaderboard</button>
+<div class="topbar">
+  <div class="topbar-left">
+    <button class="hamburger"><i class="fas fa-bars"></i></button>
+    <div class="logo"><i class="fas fa-gamepad"></i>GameUI</div>
   </div>
+  <div class="topbar-right">
+    <button class="icon-btn"><i class="fas fa-cog"></i></button>
+    <button class="icon-btn"><i class="fas fa-user"></i></button>
+  </div>
+</div>
 
-  <main class="container" id="main-container">
-    <!-- HOME / PLAY -->
-    <section id="home" class="panel active-panel" aria-label="Home">
-      <div class="hero" id="hero-section">
-        <div class="hero-left">
-          <h1 class="shimmer">Logic Runner</h1>
-          <p class="subtitle">Test your wits and master propositional logic through gameplay.</p>
+<div class="hamburger-menu" style="display:none;">
+  <button class="menu-item">Home</button>
+  <button class="menu-item">Profile</button>
+  <button class="menu-item">Settings</button>
+</div>
 
-          <div class="topic-info" aria-hidden="false">
-            <div class="topic-title"><i class="fas fa-lightbulb"></i> Propositional Logic — Quick idea</div>
-            <p>Propositional logic deals with statements that are either true or false. Practice using connectives like AND, OR, NOT and IMPLIES through short interactive challenges.</p>
-          </div>
+<div class="container">
+  <div class="hero">
+    <div class="hero-left">
+      <h1 class="shimmer">Welcome to Game UI</h1>
+      <p class="subtitle">Polished interface with gradient cards and smooth animations.</p>
 
-          <!-- Big Cards layout (two by two) -->
-          <div class="menu-cards" id="menu-cards">
-            <div class="big-card-row">
-              <button class="big-card" data-target="play" id="card-play" type="button">
-                <div class="card-icon-wrap"><i class="fas fa-play card-icon"></i></div>
-                <div class="card-body"><span class="card-title">PLAY</span><small>Jump into a randomized run</small></div>
-              </button>
-
-              <button class="big-card" data-target="tutorial-panel" id="card-tut" type="button">
-                <div class="card-icon-wrap"><i class="fas fa-book card-icon"></i></div>
-                <div class="card-body"><span class="card-title">TUTORIAL</span><small>Modes, rules & tips</small></div>
-              </button>
+      <div class="menu-cards">
+        <div class="big-card-row">
+          <button class="big-card">
+            <div class="card-icon-wrap"><i class="fas fa-star card-icon"></i></div>
+            <div class="card-body">
+              <span class="card-title">Card One</span>
+              <small>Click to start</small>
             </div>
-
-            <div class="big-card-row">
-              <button class="big-card" data-target="about-panel" id="card-about" type="button">
-                <div class="card-icon-wrap"><i class="fas fa-users card-icon"></i></div>
-                <div class="card-body"><span class="card-title">ABOUT</span><small>What the game teaches</small></div>
-              </button>
-
-              <button class="big-card" data-target="leaderboard-panel" id="card-leader" type="button">
-                <div class="card-icon-wrap"><i class="fas fa-trophy card-icon"></i></div>
-                <div class="card-body"><span class="card-title">LEADERBOARD</span><small>Top local runs</small></div>
-              </button>
+          </button>
+          <button class="big-card">
+            <div class="card-icon-wrap"><i class="fas fa-heart card-icon"></i></div>
+            <div class="card-body">
+              <span class="card-title">Card Two</span>
+              <small>Click to start</small>
             </div>
-          </div>
-
-          <div class="meta-row">
-            <span class="meta-pill">BSIT</span>
-            <span class="meta-pill">BLOCK</span>
-            <span class="meta-pill"></span>
-          </div>
+          </button>
         </div>
-
-        <aside class="hero-right">
-          <div class="card" id="settings-card">
-            <div class="card-title"><i class="fas fa-sliders-h"></i> GAME SETTINGS</div>
-            <div class="settings-row">
-              <div class="settings-label">DIFFICULTY</div>
-              <div class="settings-choices" id="difficulty-select">
-                <div class="settings-card active" data-value="easy" role="button" tabindex="0">Beginner</div>
-                <div class="settings-card" data-value="medium" role="button" tabindex="0">Intermediate</div>
-                <div class="settings-card" data-value="hard" role="button" tabindex="0">Expert</div>
-              </div>
-            </div>
-
-            <div class="settings-row">
-              <div class="settings-label">MODE</div>
-              <div class="settings-choices" id="mode-select">
-                <div class="settings-card active" data-value="classic" role="button" tabindex="0">Classic</div>
-                <div class="settings-card" data-value="timed" role="button" tabindex="0">Timed</div>
-              </div>
-            </div>
-
-            <div style="margin-top:12px;">
-              <!-- redesigned start button -->
-              <button id="start-game" class="btn-start" type="button">Start Game</button>
-            </div>
-          </div>
-
-          <div class="card small-card" id="help-card">
-            <div class="card-title"><i class="fas fa-info-circle"></i> Quick Tips</div>
-            <ol class="tips">
-              <li>Drag operator names to symbols, or answer prompts when shown.</li>
-              <li>Timed mode starts when you press Start. Timer will appear in-game only.</li>
-              <li>Use Retry/Quit while playing to control runs.</li>
-            </ol>
-          </div>
-        </aside>
       </div>
-
-      <section id="game-area" class="game-area" aria-live="polite"></section>
-    </section>
-
-    <!-- TUTORIAL -->
-    <section id="tutorial-panel" class="panel">
-      <div class="card">
-        <div class="card-title"><i class="fas fa-book"></i> Tutorial</div>
-        <div class="topic-info">
-          <div class="topic-title"><i class="fas fa-project-diagram"></i> Connectors & Semantics</div>
-          <p><strong>AND (∧)</strong> — true only when both p and q are true.<br>
-             <strong>OR (∨)</strong> — true when at least one of p or q is true.<br>
-             <strong>NOT (¬)</strong> — inverts truth.<br>
-             <strong>IMPLIES (→)</strong> — false only when p is true and q is false.</p>
-        </div>
-
-        <h3>How to Play</h3>
-        <ol class="tutorial-list">
-          <li>Choose difficulty and mode, then press Start.</li>
-          <li>Question types: symbol match, sentence fill, truth-table tasks (drag / mcq / type / dropdown / partial).</li>
-          <li>Correct answers increase score. Wrong answers lose a life. Run ends at 0 lives.</li>
-          <li>In Timed mode, each question has a countdown — answer before time runs out.</li>
-        </ol>
-      </div>
-    </section>
-
-    <!-- ABOUT -->
-    <section id="about-panel" class="panel">
-      <div class="card about-card">
-        <div class="card-title"><i class="fas fa-users"></i> About</div>
-        <div class="topic-info">
-          <div class="topic-title"><i class="fas fa-graduation-cap"></i> Learning Goals</div>
-          <p>Logic Runner is a practice tool to build fluency in propositional logic: translating sentences into logical operators, reading truth tables, and applying logical reasoning under mild time pressure.</p>
-        </div>
-        <p>Designed for students. Use it often and the patterns will stick.</p>
-      </div>
-    </section>
-
-    <!-- LEADERBOARD -->
-    <section id="leaderboard-panel" class="panel">
-      <div class="card">
-        <div class="card-title"><i class="fas fa-trophy"></i> Leaderboard (local)</div>
-
-        <div class="topic-info">
-          <div class="topic-title"><i class="fas fa-clipboard-list"></i> Tip of the Round</div>
-          <p id="topic-tip">Practice negation and small subexpressions — simplify step-by-step.</p>
-        </div>
-
-        <div style="display:flex;gap:.5rem;align-items:center;margin-bottom:8px;">
-          <input id="player-name" placeholder="Your name" class="name-input" />
-          <button id="clear-leader" class="btn btn-secondary" type="button">Clear</button>
-        </div>
-
-        <ol id="leader-list" aria-live="polite"></ol>
-      </div>
-    </section>
-  </main>
-
-  <!-- Floating HUD (top-right, shown only in-game) -->
-  <div id="floating-ui" class="floating-ui" aria-hidden="true" style="display:none;">
-    <div class="floating-top">
-      <div class="status-indicator" title="Level"><i class="fas fa-layer-group"></i> <span id="stat-level">0/0</span></div>
-      <div class="status-indicator" title="Score"><i class="fas fa-star"></i> <span id="stat-score">0</span></div>
-      <div class="status-indicator" title="Lives"><i class="fas fa-heart"></i> <span id="stat-lives">3</span></div>
-      <div id="floating-timer" class="status-indicator" style="display:none;" title="Timer"><i class="fas fa-stopwatch"></i> <span id="timer-value">0</span>s</div>
     </div>
-    <div class="floating-actions">
-      <button id="btn-retry" class="btn floating-btn" title="Retry" type="button"><i class="fas fa-redo"></i> Retry</button>
-      <button id="btn-quit" class="btn floating-btn" title="Quit" type="button"><i class="fas fa-sign-out-alt"></i> Quit</button>
+    <div class="hero-right">
+      <div class="card">
+        <div class="card-title"><i class="fas fa-info-circle"></i> Info Panel</div>
+        <p>Some details or instructions can go here.</p>
+      </div>
     </div>
   </div>
+</div>
 
-  <script src="game.js"></script>
+<script>
+// Hamburger toggle
+const hamburger = document.querySelector('.hamburger');
+const menu = document.querySelector('.hamburger-menu');
+hamburger.addEventListener('click', () => {
+  menu.style.display = menu.style.display === 'flex' ? 'none' : 'flex';
+});
+
+// Animate shimmer text
+const shimmer = document.querySelector('.shimmer');
+if(shimmer){
+  let pos = -100;
+  function animateShimmer(){
+    pos += 1.5;
+    if(pos > 100) pos = -100;
+    shimmer.style.backgroundPosition = pos + '% 0';
+    requestAnimationFrame(animateShimmer);
+  }
+  animateShimmer();
+}
+</script>
 </body>
 </html>
